@@ -183,6 +183,8 @@ module.exports = function(timeout, mml_store, map_store, mapnik_opts) {
         var sql = [];
         var style = [];
         var geom_column = [];
+        var column_type = [];
+        var extra_ds_opts = [];
         var interactivity = [];
         var style_version = cfg.hasOwnProperty('global_cartocss_version') ? cfg.global_cartocss_version : [];
         for ( var i=0; i<cfg.layers.length; ++i ) {
@@ -210,11 +212,18 @@ module.exports = function(timeout, mml_store, map_store, mapnik_opts) {
           } 
           interactivity.push(lyropt.interactivity);
           geom_column.push( lyropt['geom_column'] ); // possibly undefined
+          column_type.push( lyropt['geom_type'] ); // possibly undefined
+          extra_opt = {};
+          if ( lyropt.hasOwnProperty('raster_band') ) {
+            extra_opt['band'] = lyropt['raster_band'];
+          }
+          extra_ds_opts.push( extra_opt );
         }
         if ( ! sql.length ) throw new Error("No 'mapnik' layers in MapConfig");
         return { sql:sql, style:style, style_version:style_version,
                  interactivity:interactivity, ttl:0,
-                 gcols:geom_column };
+                 gcols:geom_column, gcoltypes:column_type,
+                 extra_ds_opts:extra_ds_opts };
     };
 
     function TileliveAdaptor(renderer, format) {
