@@ -1,0 +1,153 @@
+// FLUSHALL Redis before starting
+
+var   assert        = require('../support/assert')
+    , tests         = module.exports = {}
+    , _             = require('underscore')
+    , querystring   = require('querystring')
+    , fs            = require('fs')
+    , redis         = require('redis')
+    , th            = require('../support/test_helper')
+    , Step          = require('step')
+    , mapnik        = require('mapnik')
+    , Windshaft     = require('../../lib/windshaft')
+    , ServerOptions = require('../support/server_options')
+    , http          = require('http');
+
+suite('raster', function() {
+
+    ////////////////////////////////////////////////////////////////////
+    //
+    // SETUP
+    //
+    ////////////////////////////////////////////////////////////////////
+
+    var server = new Windshaft.Server(ServerOptions);
+    server.setMaxListeners(0);
+    var redis_client = redis.createClient(ServerOptions.redis.port);
+
+    checkCORSHeaders = function(res) {
+      var h = res.headers['access-control-allow-headers'];
+      assert.ok(h);
+      assert.equal(h, 'X-Requested-With, X-Prototype-Version, X-CSRF-Token');
+      var h = res.headers['access-control-allow-origin'];
+      assert.ok(h);
+      assert.equal(h, '*');
+    };
+
+    var IMAGE_EQUALS_TOLERANCE_PER_MIL = 25;
+
+    suiteSetup(function(done) {
+
+      // Check that we start with an empty redis db 
+      redis_client.keys("*", function(err, matches) {
+          if ( err ) { done(err); return; }
+          assert.equal(matches.length, 0, "redis keys present at setup time:\n" + matches.join("\n"));
+          done();
+      });
+
+    });
+
+    test("can render raster for valid mapconfig", function(done) {
+
+      var mapconfig =  {
+        version: '1.1.0',
+        layers: [
+           { type: 'mapnik', options: {
+               sql: "select ST_AsRaster(" +
+                    " ST_MakeEnvelope(-100,-40, 100, 40, 4326), " +
+                    " 1.0, -1.0, '8BUI', 127) as rst",
+               geom_column: 'rst',
+               geom_type: 'raster',
+               cartocss: '#layer { raster-opacity:1.0 }',
+               cartocss_version: '2.0.1'
+             } }
+        ]
+      };
+      var expected_token; 
+      Step(
+        function do_post()
+        {
+          var next = this;
+          assert.response(server, {
+              url: '/database/windshaft_test/layergroup',
+              method: 'POST',
+              headers: {'Content-Type': 'application/json' },
+              data: JSON.stringify(mapconfig)
+          }, {}, function(res, err) { next(err, res); });
+        },
+        function checkPost(err, res) {
+          if ( err ) throw err;
+          assert.equal(res.statusCode, 200, res.statusCode + ': ' + res.body);
+          // CORS headers should be sent with response
+          // from layergroup creation via POST
+          checkCORSHeaders(res);
+          var parsedBody = JSON.parse(res.body);
+          if ( expected_token ) assert.deepEqual(parsedBody, {layergroupid: expected_token, layercount: 2});
+          else expected_token = parsedBody.layergroupid;
+          return null;
+        },
+        function do_get_tile(err)
+        {
+          if ( err ) throw err;
+          var next = this;
+          assert.response(server, {
+              url: '/database/windshaft_test/layergroup/' + expected_token + '/0/0/0.png',
+              method: 'GET',
+              encoding: 'binary'
+          }, {}, function(res, err) { next(err, res); });
+        },
+        function check_response(err, res) {
+          if ( err ) throw err;
+          assert.equal(res.statusCode, 200, res.body);
+          assert.deepEqual(res.headers['content-type'], "image/png");
+          var next = this;
+          assert.imageEqualsFile(res.body,
+            './test/fixtures/raster_gray_rect.png',
+            IMAGE_EQUALS_TOLERANCE_PER_MIL, function(err) {
+              try {
+                if (err) throw err;
+                next();
+              } catch (err) { next(err); }
+            });
+        },
+        function finish(err) {
+          var errors = [];
+          if ( err ) errors.push(''+err);
+          redis_client.exists("map_cfg|" +  expected_token, function(err, exists) {
+              if ( err ) errors.push(err.message);
+              //assert.ok(exists, "Missing expected token " + expected_token + " from redis");
+              redis_client.del("map_cfg|" +  expected_token, function(err) {
+                if ( err ) errors.push(err.message);
+                if ( errors.length ) done(new Error(errors));
+                else done(null);
+              });
+          });
+        }
+      );
+    });
+
+    ////////////////////////////////////////////////////////////////////
+    //
+    // TEARDOWN
+    //
+    ////////////////////////////////////////////////////////////////////
+
+    suiteTeardown(function(done) {
+
+      // Check that we left the redis db empty
+      redis_client.keys("*", function(err, matches) {
+          try {
+            assert.equal(matches.length, 0, "Left over redis keys:\n" + matches.join("\n"));
+          } catch (err2) {
+            if ( err ) err.message += '\n' + err2.message;
+            else err = err2;
+          }
+          redis_client.flushall(function() {
+            done(err);
+          });
+      });
+
+    });
+
+});
+
